k8s/application/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: ops
  labels:
    app: backend
spec:
  type: ClusterIP
  ports:
  - port: 3080
    targetPort: 3080
    protocol: TCP
    name: http
  selector:
    app: backend
